Bug: fix timestamp overlapping controls

--- a/src/VideoEditor/Timeline/Controls/controls.css
+++ b/src/VideoEditor/Timeline/Controls/controls.css
@@ -1,7 +1,6 @@
 /** Controls **/
 .video-editor-controls {
   position: relative;
-  z-index: 99999;
   margin-top: 1.5rem;
   display: flex;
   flex-direction: row;
