--- a/src/VideoEditor/Timeline/RangeSelector/Timestamp/timestamp.css
+++ b/src/VideoEditor/Timeline/RangeSelector/Timestamp/timestamp.css
@@ -7,7 +7,8 @@
   padding: 1rem;
   width: fit-content;
   opacity: 0;
-  transition: opacity 0.5s ease;
+  pointer-events: none;
+  /** fadeout transition is set by JS in TimeStamp.js */
 }
 .timeline .timestamp p {
   color: white;
